<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/cardBackgroundColor"
    tools:context=".ui.fragments.recipes.bottomsheet.RecipesBottomSheet">

    <TextView
        android:id="@+id/txtLabelMealType"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:text="@string/txt_meal_type"
        android:textColor="@color/titleColor"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <HorizontalScrollView
        android:id="@+id/svMealType"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:scrollbars="none"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtLabelMealType">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <com.google.android.material.chip.ChipGroup
                android:id="@+id/cgMealType"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:checkedChip="@+id/chipMainCourse"
                app:selectionRequired="true"
                app:singleLine="true"
                app:singleSelection="true">

                <com.google.android.material.chip.Chip
                    android:id="@+id/chipMainCourse"
                    style="@style/CustomChipStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/txt_main_course" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/chipSideDish"
                    style="@style/CustomChipStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/txt_side_dish" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/chipDessert"
                    style="@style/CustomChipStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/txt_dessert" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/chipAppetizer"
                    style="@style/CustomChipStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/txt_appetizer" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/chipSalad"
                    style="@style/CustomChipStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/txt_salad" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/chipBread"
                    style="@style/CustomChipStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/txt_bread" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/chipBreakfast"
                    style="@style/CustomChipStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/txt_breakfast" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/chipSoup"
                    style="@style/CustomChipStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/txt_soup" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/chipBeverage"
                    style="@style/CustomChipStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/txt_beverage" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/chipSauce"
                    style="@style/CustomChipStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/txt_sauce" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/chipMarinade"
                    style="@style/CustomChipStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/txt_marinade" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/chipFingerFood"
                    style="@style/CustomChipStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/txt_finger_food" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/chipSnack"
                    style="@style/CustomChipStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/txt_snack" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/chipDrink"
                    style="@style/CustomChipStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/txt_drink" />
            </com.google.android.material.chip.ChipGroup>
        </LinearLayout>
    </HorizontalScrollView>

    <TextView
        android:id="@+id/txtLabelDietType"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:text="@string/txt_diet_type"
        android:textColor="@color/titleColor"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/svMealType" />

    <HorizontalScrollView
        android:id="@+id/svDietType"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:scrollbars="none"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtLabelDietType">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <com.google.android.material.chip.ChipGroup
                android:id="@+id/cgDietType"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:checkedChip="@+id/chipGlutenFree"
                app:selectionRequired="true"
                app:singleLine="true"
                app:singleSelection="true">

                <com.google.android.material.chip.Chip
                    android:id="@+id/chipGlutenFree"
                    style="@style/CustomChipStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/txt_gluten_free" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/chipKetogenic"
                    style="@style/CustomChipStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/txt_ketogenic" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/chipVegetarian"
                    style="@style/CustomChipStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/txt_vegetarian" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/chipVegan"
                    style="@style/CustomChipStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/txt_vegan" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/chipPescetarian"
                    style="@style/CustomChipStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/txt_pescetarian" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/chipPaleo"
                    style="@style/CustomChipStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/txt_paleo" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/chipPrimal"
                    style="@style/CustomChipStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/txt_primal" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/chipWhole30"
                    style="@style/CustomChipStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/txt_whole30" />

            </com.google.android.material.chip.ChipGroup>
        </LinearLayout>
    </HorizontalScrollView>

    <Button
        android:id="@+id/btnApply"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="24dp"
        android:text="@string/txt_apply"
        android:textAllCaps="false"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/svDietType" />
</androidx.constraintlayout.widget.ConstraintLayout>