<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_recipes">

    <fragment
        android:id="@+id/navigation_recipes"
        android:name="com.example.foody.ui.fragments.recipes.RecipesFragment"
        android:label="@string/title_recipes"
        tools:layout="@layout/fragment_recipes">
        <action
            android:id="@+id/action_navigation_recipes_to_recipesBottomSheet"
            app:destination="@id/recipesBottomSheet" />
        <argument
            android:name="backFromBottomSheet"
            android:defaultValue="false"
            app:argType="boolean" />
        <action
            android:id="@+id/recipesToDetailsActivity"
            app:destination="@id/detailsActivity" />
    </fragment>

    <fragment
        android:id="@+id/navigation_favorites"
        android:name="com.example.foody.ui.fragments.favorites.FavoritesFragment"
        android:label="@string/title_favorites"
        tools:layout="@layout/fragment_favorites" >
        <action
            android:id="@+id/favoritesToDetailsActivity"
            app:destination="@id/detailsActivity" />
    </fragment>

    <fragment
        android:id="@+id/navigation_food_joke"
        android:name="com.example.foody.ui.fragments.foodJoke.FoodJokeFragment"
        android:label="@string/title_food_joke"
        tools:layout="@layout/fragment_food_joke" />
    <dialog
        android:id="@+id/recipesBottomSheet"
        android:name="com.example.foody.ui.fragments.recipes.bottomsheet.RecipesBottomSheet"
        android:label="fragment_recipes_bottom_sheet"
        tools:layout="@layout/fragment_recipes_bottom_sheet">
        <action
            android:id="@+id/action_recipesBottomSheet_to_navigation_recipes"
            app:destination="@id/navigation_recipes" />
    </dialog>
    <activity
        android:id="@+id/detailsActivity"
        android:name="com.example.foody.ui.activities.details.DetailsActivity"
        android:label="Details"
        tools:layout="@layout/activity_details">
        <argument
            android:name="result"
            app:argType="com.example.foody.data.models.Result" />
    </activity>
</navigation>